# kaggle-titanic

./: Pipfile  README.md  pyproject.toml  results.csv  titanic_basic.ipynb  titanic_keras_basic.ipynb
.github/: dependabot.yaml
.github/workflows/: dependabot-auto-merge.yml
