[project]
name = "kaggle-titanic"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv",
    "jupyter",
    "ipykernel",
    "pandas",
    "kaggle",
    "tensorflow",
    "scikit-learn",
    "pydot",
    "plotly",
]

[dependency-groups]
dev = [
    "black[jupyter]",
    "mypy",
    "bandit",
    "flake8",
]
